module/postponed/type_constructor/tests/inc/dynamic/make/make_too_many.rs
use type_constructor as the_module;
use the_module::prelude::*;

fn main()
{
  let x = from!( 0, 1, 2, 3, 4 );
}
